--- a/kurban-cebimde/app.json
+++ b/kurban-cebimde/app.json
@@ -49,7 +49,8 @@
         {
           "ios": {
             "flipper": false,
-            "deploymentTarget": "15.1"
+            "deploymentTarget": "15.1",
+            "useFrameworks": "static"
           },
           "android": {
             "minSdkVersion": 24,
