--- a/kurban-cebimde/eas.json
+++ b/kurban-cebimde/eas.json
@@ -7,6 +7,7 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "env": { "NODE_ENV": "development" },
       "android": {
         "gradleCommand": ":app:assembleDebug",
         "buildType": "apk",
@@ -21,6 +22,7 @@
     },
     "preview": {
       "distribution": "internal",
+      "env": { "NODE_ENV": "production" },
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease",
@@ -33,6 +35,7 @@
       }
     },
     "production": {
+      "env": { "NODE_ENV": "production" },
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease",
