--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -126,10 +126,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./logs/nginx:/var/log/nginx
+      - ./kc-web:/app/kc-web:ro
     depends_on:
       - api
       - admin-panel
