--- a/kurban-cebimde/admin-panel/.env.production
+++ b/kurban-cebimde/admin-panel/.env.production
@@ -1,3 +1,3 @@
 # .env.production - Build + prod
-VITE_API_BASE=https://admin.kurbancebimde.com/api/v1
+VITE_API_BASE=http://admin.kurbancebimde.com/api/admin/v1
 VITE_PROXY=0
