--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -55,10 +55,11 @@
     "react-native": "0.81.4",
     "react-native-agora": "^4.5.3",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "^3.15.0",
+    "react-native-reanimated": "4.1.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
