--- a/nginx.conf
+++ b/nginx.conf
@@ -38,20 +38,34 @@ http {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'; script-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'" always;
 
-    # API Server Configuration
+    # Root Domain - Web site (kc-web) + API under /api
     server {
         listen 80;
-        server_name kurbancebimde.com localhost;
-        
-        # Redirect HTTP to HTTPS in production
-        # return 301 https://$server_name$request_uri;
-        
-        # For development, allow HTTP
+        server_name kurbancebimde.com www.kurbancebimde.com;
+
+        # Static web root
+        root /app/kc-web;
+        index index.html;
+
+        # Serve static assets with caching
+        location ~* \.(css|js|png|jpg|jpeg|gif|svg|ico|pdf|webp|woff|woff2|ttf)$ {
+            access_log off;
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000, immutable";
+            try_files $uri =404;
+        }
+
+        # SPA fallback
         location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        # API on path prefix
+        location /api/ {
             limit_req zone=api burst=20 nodelay;
-            
+
             proxy_pass http://api_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -61,24 +75,12 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            
-            # Timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
         }
 
-        # Health check endpoint
-        location /health {
-            proxy_pass http://api_backend;
+        # Health (proxied to api)
+        location = /health {
+            proxy_pass http://api_backend/health;
             access_log off;
-        }
-
-        # Static files
-        location /static/ {
-            alias /app/static/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
     }
 
