fix: EAS build sorunları çözüldü - React/RN sürümleri düzeltildi, Xcode image güncellendi

--- a/kurban-cebimde/app.json
+++ b/kurban-cebimde/app.json
@@ -41,7 +41,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "jsEngine": "jsc",
+    "jsEngine": "hermes",
     "newArchEnabled": false,
     "plugins": [
       [
