--- a/kurban-cebimde/eas.json
+++ b/kurban-cebimde/eas.json
@@ -17,7 +17,7 @@
         "buildConfiguration": "Debug",
         "simulator": true,
         "credentialsSource": "remote",
-        "image": "macos-sonoma-14.5-xcode-15.4"
+        "image": "macos-sequoia-15.0-xcode-16.0"
       }
     },
     "preview": {
@@ -31,7 +31,7 @@
       "ios": {
         "buildConfiguration": "Release",
         "credentialsSource": "remote",
-        "image": "macos-sonoma-14.5-xcode-15.4"
+        "image": "macos-sequoia-15.0-xcode-16.0"
       }
     },
     "production": {
@@ -44,7 +44,7 @@
       "ios": {
         "buildConfiguration": "Release",
         "credentialsSource": "remote",
-        "image": "macos-sonoma-14.5-xcode-15.4"
+        "image": "macos-sequoia-15.0-xcode-16.0"
       }
     }
   },
