--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -50,12 +50,12 @@
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "livekit-client": "^2.15.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.76.3",
     "react-native-agora": "^4.5.3",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "4.1.2",
+    "react-native-reanimated": "~3.15.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
