chore(eas): add internal iOS build profile (distribution: internal, simulator:false)

--- a/kurban-cebimde/eas.json
+++ b/kurban-cebimde/eas.json
@@ -4,6 +4,12 @@
     "appVersionSource": "remote"
   },
   "build": {
+    "internal": {
+      "distribution": "internal",
+      "ios": {
+        "simulator": false
+      }
+    },
     "development": {
       "developmentClient": true,
       "distribution": "internal",
