chore(eas-android): internal profile with remote credentials APK

--- a/kurban-cebimde/eas.json
+++ b/kurban-cebimde/eas.json
@@ -6,6 +6,11 @@
   "build": {
     "internal": {
       "distribution": "internal",
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease",
+        "credentialsSource": "remote"
+      },
       "ios": {
         "simulator": false
       }
