--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -57,8 +57,7 @@
     "react-native-reanimated": "~3.15.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
