feat: exclude React/RN packages from expo doctor checks

--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -66,6 +66,9 @@
     "typescript": "~5.9.2"
   },
   "expo": {
+    "install": {
+      "exclude": ["react", "react-dom", "react-native", "react-native-reanimated", "@types/react"]
+    },
     "doctor": {
       "reactNativeDirectoryCheck": {
         "exclude": [
