fix: add react-native-worklets and enable New Architecture for Reanimated 4.1.1

--- a/kurban-cebimde/app.json
+++ b/kurban-cebimde/app.json
@@ -42,7 +42,7 @@
       "favicon": "./assets/favicon.png"
     },
     "jsEngine": "hermes",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "plugins": [
       [
         "expo-build-properties",
