--- a/kurban-cebimde/eas.json
+++ b/kurban-cebimde/eas.json
@@ -22,7 +22,7 @@
       "android": {
         "gradleCommand": ":app:assembleDebug",
         "buildType": "apk",
-        "credentialsSource": "local"
+        "credentialsSource": "remote"
       },
       "ios": {
         "buildConfiguration": "Debug",
