fix: internal profile use development environment for correct API URL

--- a/kurban-cebimde/eas.json
+++ b/kurban-cebimde/eas.json
@@ -6,6 +6,7 @@
   "build": {
     "internal": {
       "distribution": "internal",
+      "env": { "NODE_ENV": "development" },
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease",
