--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -34,6 +34,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@types/dom-mediacapture-record": "^1.0.22",
     "axios": "^1.11.0",
     "expo": "~54.0.10",
     "expo-audio": "~1.0.13",
