fix: add expo-system-ui and update app config for Android build

--- a/kurban-cebimde/eas.json
+++ b/kurban-cebimde/eas.json
@@ -51,8 +51,8 @@
     "production": {
       "env": { "APP_ENV": "production" },
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease",
+        "buildType": "app-bundle",
+        "gradleCommand": ":app:bundleRelease",
         "credentialsSource": "remote"
       },
       "ios": {
