--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -48,6 +48,7 @@
     "expo-notifications": "~0.32.11",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
     "livekit-client": "^2.15.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
