--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -41,6 +41,7 @@
     "expo-av": "~16.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.12",
     "expo-device": "~8.0.8",
     "expo-font": "~14.0.8",
     "expo-linear-gradient": "~15.0.7",
@@ -49,7 +50,10 @@
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.11",
+    "expo-video": "~3.0.11",
     "livekit-client": "^2.15.6",
+    "livekit-react-native": "^0.8.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -65,6 +69,9 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-template-literals": "^7.27.1",
     "@types/react": "~19.1.10",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "eslint": "^9.36.0",
     "expo-build-properties": "~1.0.9",
     "typescript": "~5.9.2"
   },
