--- a/kurban-cebimde/admin-panel/env.example
+++ b/kurban-cebimde/admin-panel/env.example
@@ -1,8 +1,8 @@
 # Admin Panel Environment Variables
 
 # API Configuration
-VITE_API_BASE_URL=http://localhost:8000
-ADMIN_API_PREFIX=/api/admin/v1
+# En basit kullanım: sadece origin ver (örn: http://localhost:8000), kod kendisi /api/admin/v1 ekler
+VITE_API_BASE=http://localhost:8000
 
 # App Configuration
 VITE_APP_TITLE=Kurban Cebimde Admin Panel
