--- a/kurban-cebimde/package.json
+++ b/kurban-cebimde/package.json
@@ -7,14 +7,19 @@
     "start:metro": "EXPO_PUBLIC_API_BASE=${EXPO_PUBLIC_API_BASE:-https://admin.kurbancebimde.com} expo start --port 8082 --tunnel",
     "start:dev": "EXPO_PUBLIC_API_BASE=https://admin.kurbancebimde.com expo start --dev-client",
     "start:tunnel": "EXPO_PUBLIC_API_BASE=https://admin.kurbancebimde.com expo start --tunnel",
+    "dev": "npx expo start --tunnel",
+    "dev:lan": "npx expo start --lan",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "build:android": "eas build --platform android",
     "build:ios": "eas build --platform ios",
+    "build:ios:dev": "eas build --platform ios --profile development",
+    "build:ios:preview": "eas build --platform ios --profile preview",
     "build:all": "eas build --platform all",
     "submit:android": "eas submit --platform android",
     "submit:ios": "eas submit --platform ios",
+    "update:dev": "eas update --branch dev --message \"dev OTA\"",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "test": "jest",
@@ -26,9 +31,13 @@
     "prebuild:clean": "expo prebuild --clean"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^13.0.0",
     "@expo-google-fonts/inter": "^0.4.1",
     "@expo-google-fonts/montserrat": "^0.4.2",
     "@expo/vector-icons": "^15.0.2",
+    "@livekit/react-native": "^2.9.1",
+    "@livekit/react-native-expo-plugin": "^1.0.1",
+    "@livekit/react-native-webrtc": "^137.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -36,6 +45,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/dom-mediacapture-record": "^1.0.22",
     "axios": "^1.11.0",
+    "es-abstract": "^1.24.0",
     "expo": "~54.0.10",
     "expo-audio": "~1.0.13",
     "expo-av": "~16.0.7",
@@ -50,20 +60,17 @@
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.11",
+    "expo-updates": "~29.0.12",
     "expo-video": "~3.0.11",
-    "livekit-client": "^2.15.6",
-    "livekit-react-native": "^0.8.0",
+    "livekit-client": "^2.15.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-agora": "^4.5.3",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -79,6 +86,7 @@
     "doctor": {
       "reactNativeDirectoryCheck": {
         "exclude": [
+          "@livekit/react-native",
           "expo-livekit",
           "react-native-agora",
           "@livekit/react-native-webrtc",
@@ -86,6 +94,12 @@
         ],
         "listUnknownPackages": false
       }
+    },
+    "install": {
+      "exclude": [
+        "react-native-worklets",
+        "react-native-reanimated"
+      ]
     }
   },
   "private": true
